<resources>
    <string name="app_name">Edutoo</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="auth_failed2">Authentication failed, Email is not yet Verified</string>
    <string name="auth_failed3">Hello Teacher. Sorry you can\'t login here.</string>
    <string name="verify_first">Email Verification has been sent to your email</string>
    <string name="no_group_yet">No Group Yet!</string>
    <string name="no_pdf_yet">No Available Lesson. Read a lesson to save it.</string>
    <string name="wait_for_approval">Please Wait for your teacher\'s approval.</string>
    <string name="approved">Your teacher approved your request. \n You are now a member of a group.</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Register Now!</string>
    <string name="btn_link_to_login">Already registered?</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="success">Success</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="activity">Activities</string>
    <string name="score">Scores</string>
    <string name="timestamp">Time Stamp</string>
    <string name="norecord">No Record Yet.</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_catalog">Dashboard</string>
    <string name="nav_courses">Classes</string>
    <string name="nav_movies">Messages</string>
    <string name="nav_notifications">Profile</string>
    <string name="nav_joingroup">Join A Group</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_log_out">Log Out</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Dashboard</item>
        <item>Classes</item>
        <item>Messages</item>
        <item>Profile</item>
        <item>Join A Group</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="registerinfo_name">Name</string>
    <string name="registerinfo_age">Age</string>
    <string name="btn_registerinfo_Save">Save</string>
    <string name="txt_registerinfo_txt">Register Your Information</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This is the home screen</string>
    <string name="hello_catalog_fragment">This is the catalog screen</string>
    <string name="biology">Biology</string>
    <string name="joingroup">Join A Group</string>
    <string name="no_group">Continue As Guest</string>
    <string name="image_display">Image Display</string>
    <string name="radiobutton">RadioButton</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="take_quiz">Take Quiz</string>
</resources>
