<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_catalog"

            android:title="@string/nav_catalog" />
        <item
            android:id="@+id/nav_classes"

            android:title="@string/nav_courses" />

        <item
            android:id="@+id/nav_joingroup"

            android:title="@string/nav_joingroup" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
            <item
                android:id="@+id/nav_log_out"
                android:title="Log-Out" />
        </menu>
    </item>

</menu>
