<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pikmi85.thesisfinal.activity.LoginScreen">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/skyblue"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        tools:ignore="NotSibling,UselessParent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">




        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            app:srcCompat="@mipmap/ic_logo"
            android:contentDescription=""
            tools:ignore="ContentDescription" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890_@."
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLength="254"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@color/darkorange" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:digits="abcdefghijklmnopqrstuvwxyz0123456789"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLength="254"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@color/darkorange" />


        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/darkorange"
            android:text="@string/btn_login"
            android:textColor="@android:color/black" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="125dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:elevation="7dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/darkorange" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/darkorange"
            android:textSize="15dp"
            tools:ignore="SpUsage" />
    </LinearLayout>

</RelativeLayout>
